--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.5.1",
-    "@fullcalendar/daygrid": "^5.10.0",
-    "@fullcalendar/interaction": "^5.10.0",
-    "@fullcalendar/react": "^5.10.0",
+    "@fullcalendar/daygrid": "5.10.0",
+    "@fullcalendar/interaction": "5.10.0",
+    "@fullcalendar/react": "5.10.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
